updates/05/24/24